# anchorna

./: .gitignore  .readthedocs.yaml  CHANGELOG  README.md  pyproject.toml
.github/workflows/: tests.yml
anchorna/: __init__.py  cli.py  core.py  io.py  util.py
anchorna/tests/: conftest.py  pytest.ini  test_anchorna.py
anchorna/tests/data/: anchors_complete.gff  anchors_subset.gff
docs/: conf.py
docs/_templates/sidebar/: navigation.html
docs/src/: cli.rst  core.rst  index.rst  io.rst  util.rst
